// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content = table - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "### Table 

| A | B | C |
|---:|:---:|:---|
| one | two | three |
| 123 | 345 | 34892 |
| true | false | none |
",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "# One Heading

A paragraph with *emphasis* and **strong importance**.

> A block quote with ~strikethrough~ and a URL: https://reactjs.org.

#### Link

[A link to Lowdefy](https://lowdefy.com)

# Two

* Lists
* [ ] todo
* [x] done

A table:

| a | b |
| - | - |
",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content DangerousHtml - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "### Link 

<a href=\\"https://lowdefy.com\\">Lowdefy link</a>

<font size=\\"+10\\">Description</font>

### Bad HTML 

<div>
  <a>delta</a>
  <img src=\\"x\\">
  
  <math>
    <mi></mi>
  </math>
</div>

",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content with code - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "### Code 

Default
\`\`\`
  <a href=\\"https://lowdefy.com\\">Default style</a>
\`\`\`

Html
\`\`\`html
  <a href=\\"\\">html style</a>
  
\`\`\`

Json
\`\`\`json
  {
    \\"obj\\": \\"one\\",
    \\"list\\": [
      1,
      2
    ]
  }
\`\`\`

Bad HTML 
\`\`\`html
<div>
  <a>delta</a>
  <img src=\\"x\\">
  
  <math>
    <mi></mi>
  </math>
</div>

\`\`\`
",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.html-DOMPurifyOptions.ADD_TAGS-iframe - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "## With iframe ADD_TAGS:

<iframe src=\\"https://www.youtube.com/embed/7N7GWdlQJlU\\" height=\\"315\\" width=\\"560\\"></iframe>
",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.html-iframe - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "No additional ADD_TAGS:

",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style and headings - value[0] - DangerousMarkdown 1`] = `
Array [
  Array [
    Object {
      "allowDangerousHtml": true,
      "children": "# One
## Two
### Three
#### Four
##### Five
###### Six
",
      "className": "markdown-body",
      "plugins": Array [
        [Function],
      ],
      "skipHtml": false,
    },
    Object {},
  ],
]
`;
